syntax = "proto3";
package com.wavesplatform.api.grpc;
import "recipient.proto";
import "transaction.proto";
import "google/protobuf/empty.proto";

service TransactionsApi {
    rpc GetTransactionsByAddress (TransactionsByAddressRequest) returns (stream SignedTransaction);
    rpc GetTransactionById (TransactionByIdRequest) returns (SignedTransaction);
    rpc GetUnconfirmedTransactions (google.protobuf.Empty) returns (stream SignedTransaction);
    rpc GetUnconfirmedTransactionById (TransactionByIdRequest) returns (SignedTransaction);
    rpc CalculateFee (Transaction) returns (CalculateFeeResponse);
    rpc SignTransaction (TransactionSignRequest) returns (SignedTransaction);
    rpc BroadcastTransaction (SignedTransaction) returns (SignedTransaction);
}

message TransactionsByAddressRequest {
    Recipient address = 1;
    bytes from_id = 2;
}

message TransactionByIdRequest {
    bytes transaction_id = 1;
}

message CalculateFeeResponse {
    bytes asset_id = 1;
    uint64 amount = 2;
}

message TransactionSignRequest {
    Transaction transaction = 1;
    bytes signer = 2;
}
